--- a/Django/dockerize existing django project/Dockerfile
+++ b/Django/dockerize existing django project/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:2.7
  RUN apt-get update -qq && apt-get install build-essential g++ flex bison gperf ruby perl \
-  libsqlite3-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
+  mysql-client \
+  libsqlite3-dev libmysqlclient-dev libfontconfig1-dev libicu-dev libfreetype6 libssl-dev \
   libpng-dev libjpeg-dev python libx11-dev libxext-dev -y
  ENV PYTHONUNBUFFERED 1
  RUN mkdir /code
