--- a/Django/dockerize existing django project/docker-compose.yml
+++ b/Django/dockerize existing django project/docker-compose.yml
@@ -1,9 +1,31 @@
 version: '2'
 services:
+  db:
+    image: mysql
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: mypassword
+      MYSQL_USER: root
+      MYSQL_PASSWORD: mypassword
+      MYSQL_DATABASE: bergeb2c
   web:
     build: .
+    command: python manage.py makemigrations
+    command: python manage.py migrate
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - "8000:8000"
+    depends_on:
+      - db
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    environment:
+      - PMA_ARBITRARY=1
+    restart: always
+    ports:
+      - 8085:80
+    volumes:
+      - /sessions  
