--- a/Django/dockerize existing django project/requirements.txt
+++ b/Django/dockerize existing django project/requirements.txt
@@ -18,7 +18,7 @@ idna==2.1
 ipaddress==1.0.17
 mercurial==3.7.3
 mock==1.3.0
-MySQL-python==1.2.5
+mysql-python
 ndg-httpsclient==0.4.2
 parsedatetime==2.1
 pbr==1.8.0
@@ -36,7 +36,6 @@ requests==2.11.1
 six==1.10.0
 Unidecode==0.4.19
 urllib3==1.16
-virtualenv==15.0.1
 zope.component==4.2.2
 zope.event==4.2.0
 zope.hookable==4.0.4
